update maven version
Signed-off-by: Aram Hăvărneanu <aram@mgk.ro>